--- a/spingsecurityhibernateexample/src/main/resources/application.properties
+++ b/spingsecurityhibernateexample/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/sshae
-jdbc.username=myuser
-jdbc.password=mypassword
+jdbc.username=root
+jdbc.password=root_123
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 hibernate.show_sql=true
 hibernate.format_sql=true
