--- a/SpringSecurityHibernateAnnotationExample/.project
+++ b/SpringSecurityHibernateAnnotationExample/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>SpringSecurityHibernateAnnotationExample</name>
+	<name>ssha</name>
 	<comment></comment>
 	<projects>
 	</projects>
